# ChangeLog for media-fonts/sharefonts
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/sharefonts/ChangeLog,v 1.17 2006/11/26 23:52:34 flameeyes Exp $

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  sharefonts-0.10-r3.ebuild:
  Add ~x86-fbsd keyword.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> sharefonts-0.10-r3.ebuild:
  Mark 0.10-r3 stable on ia64

  14 Dec 2004; Markus Rothe <corsair@gentoo.org> sharefonts-0.10-r3.ebuild:
  Stable on ppc64

  01 Nov 2004; Markus Rothe <corsair@gentoo.org> sharefonts-0.10-r3.ebuild:
  Marked ~ppc64; bug #68103

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  sharefonts-0.10-r3.ebuild:
  stable on amd64.

  29 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  sharefonts-0.10-r3.ebuild:
  Stable on sparc

  29 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> -sharefonts-0.10-r2.ebuild,
  sharefonts-0.10-r3.ebuild:
  Stable on x86, alpha and ppc.

  01 Jun 2004; L. Boshell <leonardop@gentoo.org> sharefonts-0.10-r3.ebuild:
  Added IUSE var.

*sharefonts-0.10-r3 (31 May 2004)

  31 May 2004; foser <foser@gentoo.org> sharefonts-0.10-r3.ebuild :
  Use font eclass, add some more docs. Unsure about licensing

  30 May 2004; L. Boshell <leonardop@gentoo.org> sharefonts-0.10-r1.ebuild:
  Added IUSE var.

*sharefonts-0.10-r2 (15 May 2004)

  15 May 2004; Mamoru KOMACHI <usata@gentoo.org> sharefonts-0.10-r2.ebuild:
  Changed font path to /usr/share/fonts. Bug #44842
  Updated to reflect changes in freefonts-0.10-r2.

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> sharefonts-0.10-r1.ebuild:
  amd64 marked stable.

  03 Feb 2004; <augustus@gentoo.org> sharefonts-0.10-r1.ebuild:
  Added ~amd64 keyword.

  10 Oct 2003; L. Boshell <leonardop@gentoo.org> sharefonts-0.10-r1.ebuild:
  Use mirror://gimp/. Adding gnome herd to metadata.xml (but feel free to
  take it away from us if you feel you should be the maintainer :).

*sharefonts-0.10-r1 (02 Jun 2003)
