@@ -1,4 +1,4 @@
 DIST sharefonts-0.10.tar.gz 750577 RMD160 e97c480fd84d3dc0b726ede71f285e6387fa4022 SHA1 5dff356c338582c2485430bc0a764fee1666b657 SHA256 43bd85e7ac05a2e3fc496e6c5a3954f023a6602c13332625e07b7d26ad36b1e5
-EBUILD sharefonts-0.10-r3.ebuild 550 RMD160 85f2fa4d6bc75e80a4f7716726056b94db4e59a5 SHA1 d7bd7e24225bb8df09419742934c0b502e45a3fc SHA256 f11a414de5a08ca7e51a53a7f0ce0e54d51cfd7cae3351ff92b3d4f7f85db929
-MISC ChangeLog 2929 RMD160 f210ba4f4a2e3ddb07dbffbf6fc4b1783cd2dd1a SHA1 e1045c4641cb67fc62966b6098ea998027c1caa9 SHA256 0e5de7c59bc3bcf980028770ac1122ecd83e646733bfcfd68b222577788a3b23
+EBUILD sharefonts-0.10-r3.ebuild 575 RMD160 7dbe91e8a1458ae6041417ea372cd9a4c3249c4e SHA1 d56d123a594c5a2b4aefc03187e6e603b2306bb5 SHA256 78bc7dd854824581233ddb01c5eb8283a4f2bed9d8342613c6c93a0e140a39ec
+MISC ChangeLog 3083 RMD160 79af0718dadfd7b876d2c84bfc46d306650b8438 SHA1 c5f649276a88d613a66631396f01d9f80d053190 SHA256 4d90e7b835c58c414951838ec0c80025bdf97f51cd8dad1f47db4574c873203a
 MISC metadata.xml 177 RMD160 8ad6882ca65d776de9a10e9d28b3ff5c7237c3cd SHA1 3cfc9cdab6b1268e3c5aaba923c2f67abca5c2b8 SHA256 cefee51c44470649412e9a375c4282ca9970a9abb855160bf70a82f0bd176cf6
